discussion/kv_engine/174861/174861_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

[WIP] MB-52080: Add test coverage for allocator-based stats

Change-Id: If11b8fd7f03d74ff90a11b57d6d74ca79aadf833

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-05-23 10:26:04.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 10:32:07.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17658/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:107:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Allocating " + std::to_string(n * sizeof(T)) << std::endl;
             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:113:14: error: no member named "cout" in namespace "std" [clang-diagnostic-error]
        std::cout << "Deallocating " + std::to_string(n * sizeof(T))
             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17658/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/platform/include/platform/memory_tracking_allocator.h:107:14:
error: no member named "cout" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17658/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16684/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:20:13.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16917/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16917/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17871/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17871/ )
----------------------------------------------------------------------------------------------------------------------
